--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "node generate-config.js"
+    "build": "node generate-config.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
